Fix layout issue in activity table

--- a/src/Quarter.Style/src/pages/_projects.sass
+++ b/src/Quarter.Style/src/pages/_projects.sass
@@ -21,7 +21,6 @@
 
     .q-activity-table
         overflow-x: auto
-        display: block
 
         .q-icon
             min-width: 1.5rem
@@ -33,12 +32,12 @@
             white-space: nowrap
 
         .q-activity-marker-column
+            width: 100%
+
             .q-activity-marker
                 margin-left: 12px
                 margin-right: 12px
 
-        .q-activity-name-column
-            width: 100%
 
         .q-activity-action-column
             button
